<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_select_supplier"
        android:icon="@drawable/ic_cfg_source"
        android:title="@string/agent_select_supplier"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_search_book"
        android:icon="@drawable/ic_search"
        android:title="@string/agent_search_book"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_clear_chat"
        android:icon="@drawable/ic_clear_all"
        android:title="@string/agent_clear_chat"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_log"
        android:icon="@drawable/ic_cfg_about"
        android:title="@string/log"
        app:showAsAction="never" />

</menu>
